# prove

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prove_brand_strategy.docx  prove_business_plan.docx  prove_tech_spec.docx  prove_tldr.md
.github/workflows/: ci.yml
app/: next.config.js  package.json  railway.toml  tailwind.config.js
app/src/app/: globals.css  layout.tsx  nav.tsx  page.module.css  providers.tsx
app/src/components/: AuctionRow.module.css  AuctionRow.tsx  ProveScoreRing.tsx  QuestCard.tsx  TokenCard.tsx  TokenRow.module.css  TokenRow.tsx  motion.tsx
app/src/hooks/: useAuction.ts  usePrivyWallet.ts  useSwap.ts  useTransaction.ts
app/src/lib/: api.ts  format.ts  programs.ts  transactions.ts
archive/prove-amm/: Cargo.toml
archive/ticker-registry/: Cargo.toml
archive/ticker-registry/src/: lib.rs
docs/: MAINNET_CHECKLIST.md  PR2_HANDOFF.md
migrations/: 001_initial.sql
programs/batch-auction/: Cargo.toml
programs/batch-auction/src/: lib.rs
programs/fee-router/src/: lib.rs
programs/prove-amm/src/: lib.rs
programs/stake-manager/src/: lib.rs
programs/ticker-registry/src/: lib.rs
scripts/: create-raydium-pool.ts  db-seed.ts  deploy-devnet.sh  generate-idl.sh  init-programs.ts  package.json  setup-railway.sh  tsconfig.json
services/indexer/: package.json  railway.toml
services/quest-verifier/: package.json  railway.toml
skills/sigil-ux-ui/: SKILL.md
skills/web3-fullstack-playbook/: SKILL.md
tests/: prove.test.ts  tsconfig.json
(+40 files in other folders)
