[workspace]
members = [
    "programs/batch-auction",
    "programs/fee-router",
    "programs/stake-manager",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
overflow-checks = true
